fixed excellence text, a bit better anyways on mobile

--- a/src/components/Excellence/Excellence.css
+++ b/src/components/Excellence/Excellence.css
@@ -19,12 +19,13 @@
   .excellenceTextBox{
     display: flex;
     justify-content: center;
-    font-size: 100%;
+    font-size:50%vw;
     width: 100%;
+
   
 
   /* same with this if i remove padding left 50% then the text dissapears off to the left i presume but if i put it back then it throws things off to the right */
-    /* padding-left:50%; */
+    padding-left:50%;
 
   }
 
