--- a/src/components/OurBlends/OurBlends.css
+++ b/src/components/OurBlends/OurBlends.css
@@ -371,6 +371,7 @@ body {
     display: flex;
     justify-content: center;
     font-size: 50%vw;
+    border: 2px solid yellow;
   }
 
   .accordionHeader {
@@ -386,7 +387,7 @@ body {
     height: 700px;
     box-shadow: none;
     width: 100%;
-    height: auto;
+    /* height: auto; */
     /* max-width: 1467px; */
   }
 
